[package]
name = "peaq-data-transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = { version="0.11.12", features=["blocking", "json" ]}
tokio = { version = "1.21.1", features = ["full"] }
serde_json = "1.0.85"



